--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 code {
@@ -20,14 +21,49 @@ code {
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 60%;
-  border-radius: 5px;
-  margin: 1em;
-  padding: 1em;
-}
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 5px;
+    display: inline-block !important;
+    transition: 0.3s;
+    margin: 5px 2px;
+  }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.table th {
+  text-align: center !important;
+  vertical-align: middle !important;    
+} 
+
+.thead-blue {
+    background-color: #746fbd;
+    color: #fff;
+}
+.table td {
+    vertical-align: middle !important; 
+}
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px 0 0;
+}
+footer p{
+    margin-bottom: 0;
+}
+
+.btn-add {
+  float: right;
+  text-align: right;
+  background-color: #746fbd !important;
+  border-color: #746fbd !important;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+  cursor: pointer;
+  border-radius: unset !important;
 }
