--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ footer {
     background-color: #111;
     color: #fff;
     padding: 10px 0 0;
+    /* position: absolute; */
+    bottom: 0;
+    left: 0;
+    width: 100%
 }
 footer p{
     margin-bottom: 0;
@@ -66,4 +70,19 @@ footer p{
   margin: 10px;
   cursor: pointer;
   border-radius: unset !important;
+}
+
+
+a{
+  cursor: pointer;
+}
+
+.form-control {
+  width: 50%;
+  border: 1px solid #ccc;
+  padding: 10px; 
+}
+
+.control-error {
+  border: 1px solid red !important;
 }
